assignment 3: feature extraction

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -29,13 +29,23 @@
     "import os\n",
     "\n",
     "import requests\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import sparse\n",
+    "from scipy import sparse, stats\n",
     "import scipy.sparse.linalg\n",
+    "import librosa\n",
+    "import IPython.display as ipd\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (17, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the above cell fails, it's most probably because you miss a package. Install it with e.g. `conda install librosa` or `pip install librosa`."
    ]
   },
   {
@@ -58,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As often, we need an API key for certain operations. Add the following to your `credentials.ini` file. I gave a key during November 6th lab. If you were not there, ask one of your colleague.\n",
+    "As often, we need an API key for certain operations. Add the following to your `credentials.ini` file. I gave a key during the lab on November 6. If you were not there, ask one of your classmates.\n",
     "```\n",
     "[freemusicarchive]\n",
     "api_key = MY-KEY\n",
@@ -84,7 +94,8 @@
     "Your first task is to develop a function to retrieve the genre ID of a track given its track ID using the [FMA API](https://freemusicarchive.org/api).\n",
     "\n",
     "Hints:\n",
-    "* A track might have multiple genres associated to it. Always return the first one and discard the others. Note: you should never discard data blindly. I selected the tracks so that this is not a problem.\n",
+    "* A track might have multiple genres associated to it. Always return the first one and discard the others.\n",
+    "    * Note: you should never discard data blindly. I selected the tracks so that this is not a problem.\n",
     "* The `get_genre` function takes an integer as input, the track ID, and returns another integer, the genre ID."
    ]
   },
@@ -111,7 +122,7 @@
    "source": [
     "### 1.2 Create a table of tracks\n",
     "\n",
-    "The `fma_tracks.csv` file contains a list of 2'000 tracks that we will use through this assignment. Each track belongs to either one of the following *top-level genres*: Electronic (`genre_id=12`) and Hip-Hop (`genre_id=21`)."
+    "The `fma_tracks.csv` file contains a list of 2'000 track IDs that we will use through this assignment."
    ]
   },
   {
@@ -150,8 +161,7 @@
     "\n",
     "Hints:\n",
     "* When developing, retrieve the genre of the first 10 tracks only. Only once your code works run it through all the tracks. That will save you time.\n",
-    "* As we want to apply one function (`get_genre`) to many data samples (the 2000 track IDs), use a functional approach. Check out `tracks.apply()`.\n",
-    "* In Python, you can declare an [anonymous function](https://en.wikipedia.org/wiki/Anonymous_function) as `lambda x: x + 1`.\n",
+    "* As we want to apply one function (`get_genre`) to many data samples (the 2000 track IDs), try to use a functional approach. Check out `tracks.apply()` or the built-in `map`. In Python, you can declare an [anonymous function](https://en.wikipedia.org/wiki/Anonymous_function) as `lambda x: x + 1`.\n",
     "* Your table should look like the below table, except with the correct number instead of 0."
    ]
   },
@@ -171,12 +181,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks = tracks[:3]\n",
+    "tracks = tracks[:10]\n",
     "\n",
-    "tracks['genre'] = tracks.apply(lambda track: get_genre(track.name), axis=1)\n",
+    "#tracks['genre'] = tracks.apply(lambda track: get_genre(track.name), axis=1)\n",
     "\n",
     "# Alternatively:\n",
-    "# tracks['genre'] = list(map(get_genre, tracks.index))"
+    "# tracks['genre'] = list(map(get_genre, tracks.index))\n",
+    "\n",
+    "# Alternatively:\n",
+    "for tid in tqdm(tracks.index[:10]):\n",
+    "    tracks.at[tid, 'genre'] = get_genre(tid)"
    ]
   },
   {
@@ -194,7 +208,7 @@
    "source": [
     "### 1.4 Save the data\n",
     "\n",
-    "To avoid having to collect the data everytime you restart the kernel, save the DataFrame as a CSV file."
+    "To avoid having to collect the data everytime you restart the IPython kernel, save the DataFrame as a CSV file."
    ]
   },
   {
@@ -228,7 +242,7 @@
    "source": [
     "### 1.5 Data cleaning\n",
     "\n",
-    "As always, data cleaning is necessary when dealing with real (as opposed to synthetic) data. In this case, we only need to \"summarize the genres\". The tracks I've selected for the assignment are only part of the Electronic and Hip-Hop top genres. There *actual genre(s)* might however be more specific and be a sub-genre of those too. E.g. IDM is a sub-genre of Electronic. You can explore the genre hierarchy on the [Free Music Archive](http://freemusicarchive.org/genre/Electronic/)."
+    "As always, data cleaning is necessary when dealing with real (as opposed to synthetic) data. In this case, we only need to \"summarize the genres\". The tracks I've selected for the assignment belong to either one of the following *top-level genres*: Rock (`genre_id=12`) and Hip-Hop (`genre_id=21`). There *actual genre(s)* might however be more specific and be a sub-genre of those. For example Punk is a sub-genre of Rock. You can explore the genre hierarchy on the [Free Music Archive](http://freemusicarchive.org/genre/Rock/). The below function will return the correct top-level genre for any of the sub-genres you'll encounter."
    ]
   },
   {
@@ -289,10 +303,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = '/data/research/projects/fma_dataset/data/fma_small'\n",
+    "\n",
+    "def get_path(track_id):\n",
+    "    tid_str = '{:06d}'.format(track_id)\n",
+    "    return os.path.join(PATH, tid_str[:3], tid_str + '.mp3')\n",
+    "\n",
+    "filepath = get_path(tracks.index[0])\n",
+    "print('File: {}'.format(filepath))\n",
+    "\n",
+    "audio, sampling_rate = librosa.load(filepath, sr=None, mono=True)\n",
+    "print('Duration: {:.2f}s, {} samples'.format(audio.shape[-1] / sampling_rate, audio.size))\n",
+    "\n",
+    "start, end = 7, 17\n",
+    "ipd.Audio(data=audio[start*sampling_rate:end*sampling_rate], rate=sampling_rate)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature normalization"
+    "### 2.1 Computation"
    ]
   },
   {
@@ -306,6 +342,85 @@
     "assert (tracks.index == features.index).all()\n",
     "\n",
     "features.shape, tracks.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hint:\n",
+    "* Use `tqdm` to show progress. For example `for i in tqdm(range(10)): print(i)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_MFCC = 20\n",
+    "\n",
+    "columns = []\n",
+    "for stat in ['mean', 'std', 'skew', 'kurtosis', 'median', 'min', 'max']:\n",
+    "    columns.extend(('mfcc', stat, '{:02d}'.format(i+1)) for i in range(N_MFCC))\n",
+    "\n",
+    "names = ('feature', 'statistics', 'number')\n",
+    "columns = pd.MultiIndex.from_tuples(columns, names=names).sort_values()\n",
+    "features = pd.DataFrame(index=tracks.index, columns=columns, dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_mfcc(track_id):\n",
+    "    audio, sampling_rate = librosa.load(get_path(track_id), sr=None, mono=True)\n",
+    "    return librosa.feature.mfcc(y=audio, sr=sampling_rate, n_mfcc=N_MFCC)\n",
+    "\n",
+    "compute_mfcc(tracks.index[0]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tid in tqdm(tracks.index):\n",
+    "    mfcc = compute_mfcc(tid)\n",
+    "    features.at[tid, ('mfcc', 'mean')] = np.mean(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'std')] = np.std(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'skew')] = stats.skew(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'kurtosis')] = stats.kurtosis(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'median')] = np.median(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'min')] = np.min(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'max')] = np.max(mfcc, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(features.shape)\n",
+    "features.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Feature selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Feature normalization"
    ]
   },
   {
@@ -614,14 +729,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn as skl\n",
-    "import sklearn.utils, sklearn.preprocessing, sklearn.decomposition\n",
+    "from sklearn import preprocessing, decomposition\n",
     "\n",
-    "features_pca = skl.decomposition.PCA(n_components=2).fit_transform(features)\n",
+    "features_pca = decomposition.PCA(n_components=2).fit_transform(features)\n",
     "\n",
-    "genres = skl.preprocessing.LabelEncoder().fit_transform(tracks)\n",
+    "genres = preprocessing.LabelEncoder().fit_transform(tracks['genre'])\n",
     "\n",
     "plt.scatter(features_pca[:,0], features_pca[:,1], c=genres, cmap='RdBu', alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note how this plot summarizes well 2GB of data and 2000 tracks."
    ]
   },
   {
@@ -637,7 +758,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cluster the tracks with the Fiedler vector. How many tracks were wrongly identified?"
+    "Cluster the tracks with the Fiedler vector."
    ]
   },
   {
@@ -649,6 +770,13 @@
     "labels = (eigenvectors[:, 1] > 0)\n",
     "\n",
     "plt.scatter(eigenvectors[:, 1], eigenvectors[:, 2], c=labels, cmap='RdBu', alpha=0.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many tracks were wrongly identified?"
    ]
   },
   {
@@ -667,6 +795,31 @@
    "metadata": {},
    "source": [
     "Tune some parameters (e.g. `kernel_width`, `NEIGHBORS`) to get less errors. You should get an error rate lower than 15% (i.e. less than 300 errors in total). Try to understand the effect of each parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 Conclusion\n",
+    "\n",
+    "Among other things, this assignment showed us that a graph can be useful for e.g. visualization or clustering, even when there is none in the original data. We exercised here two steps of the Data Science process: i) data collection, and ii) data exploitation. The exploitation of the data showed us that a machine can discern musical genres by looking at pairwise distances between spectral features extracted from audio recordings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 Bonus\n",
+    "\n",
+    "What is the name of the technique we used to visualize the data in the last two plots? What does it try to preserve when reducing the dimensionality (of the ambiant space) from 140 to 2?"
    ]
   }
  ],
