assignment 3: last edits

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# NTDS assignment 3: spectral graph theory\n",
-    "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL](http://epfl.ch) [LTS2](http://lts2.epfl.ch)"
+    "[Michaël Defferrard](http://deff.ch), *PhD student*, [EPFL LTS2](http://lts2.epfl.ch)"
    ]
   },
   {
@@ -461,11 +461,13 @@
     "$$d(u,v) = 1 - \\frac{u \\cdot v} {\\|u\\|_2 \\|v\\|_2},$$\n",
     "where $u$ and $v$ are two feature vectors.\n",
     "\n",
-    "Geomettrically, what does the cosine distance compute? **Your answer here.** The angle between the two vectors.\n",
+    "Geometrically, what does the cosine distance compute? **Your answer here.**\n",
     "\n",
     "Alternatives are the [$p$-norms](https://en.wikipedia.org/wiki/Norm_%28mathematics%29#p-norm) (or $\\ell_p$-norms), defined as\n",
     "$$d(u,v) = \\|u - v\\|_p,$$\n",
     "of which the Euclidean distance is a special case with $p=2$.\n",
+    "\n",
+    "Implement the cosine distance first. Once you are done with the rest of the assignment and reach section 5.4, come back here and try to identify the most relevant metric for our end goal, i.e. data visualization and clustering.\n",
     "\n",
     "Hints:\n",
     "* Save yourself some pain and use `pdist` and `squareform` from `spatial.distance`."
@@ -599,25 +601,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "indices = np.argsort(tracks['genre'])\n",
-    "tracks = tracks.iloc[indices]\n",
-    "features = features.iloc[indices]\n",
-    "weights = weights[indices, :]\n",
-    "weights = weights[:, indices]\n",
-    "distances = distances[indices, :]\n",
-    "distances = distances[:, indices]\n",
-    "fig, axes = plt.subplots(1, 2)\n",
-    "axes[0].spy(weights)\n",
-    "axes[1].imshow(distances);"
+    "# Your code here."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 Degree matrix\n",
+    "### 3.4 Degrees\n",
     "\n",
-    "Compute below the degree matrix.\n",
+    "Compute below the degree vector.\n",
     "\n",
     "Hints:\n",
     "* Again, looking at the degree distribution will help you identify any mistake."
@@ -821,7 +814,7 @@
    "source": [
     "features_pca = decomposition.PCA(n_components=2).fit_transform(features)\n",
     "genres = preprocessing.LabelEncoder().fit_transform(tracks['genre'])\n",
-    "plt.scatter(features_pca[:,0], features_pca[:,1], c=genres, cmap='RdBu', alpha=0.5);"
+    "plt.scatter(features_pca[:, 0], features_pca[:, 1], c=genres, cmap='RdBu', alpha=0.5);"
    ]
   },
   {
