Revert "assignment 3: remove answers"
This reverts commit 425897c24b50aaf3e39570e4bf8c8f9d168e93bb.

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -114,10 +114,10 @@
    "source": [
     "def get_genre(track_id):\n",
     "    \"\"\"Returns the genre of a track by querying the API.\"\"\"\n",
-    "    BASE_URL = # Your code here.\n",
-    "    url = # Your code here.\n",
-    "    response = # Your code here.\n",
-    "    return # Your code here.\n",
+    "    BASE_URL = 'https://freemusicarchive.org/api/get/tracks.json'\n",
+    "    url = '{}?track_id={}&api_key={}'.format(BASE_URL, track_id, api_key)\n",
+    "    response = requests.get(url).json()\n",
+    "    return int(response['dataset'][0]['track_genres'][0]['genre_id'])\n",
     "\n",
     "# A correct implementation should pass the below test.\n",
     "assert get_genre(1219) == 38"
@@ -193,7 +193,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "tracks.iloc[:10, 0] = tracks.iloc[:10].apply(lambda track: get_genre(track.name), axis=1)\n",
+    "\n",
+    "# Alternatively:\n",
+    "# tracks.iloc[:10, 0] = list(map(get_genre, tracks.index[:10]))\n",
+    "\n",
+    "# Alternatively:\n",
+    "# for tid in tqdm(tracks.index[:10]):\n",
+    "#     tracks.at[tid, 'genre'] = get_genre(tid)"
    ]
   },
   {
@@ -334,7 +341,8 @@
     "N_MFCC = 20\n",
     "\n",
     "def compute_mfcc(track_id):\n",
-    "    # Your code here.\n",
+    "    audio, sampling_rate = librosa.load(get_path(track_id), sr=None, mono=True)\n",
+    "    return librosa.feature.mfcc(y=audio, sr=sampling_rate, n_mfcc=N_MFCC)\n",
     "\n",
     "mfcc = compute_mfcc(tracks.index[0])\n",
     "assert mfcc.ndim == 2\n",
@@ -383,13 +391,13 @@
    "source": [
     "for tid in tqdm(tracks.index[:10]):\n",
     "    mfcc = compute_mfcc(tid)\n",
-    "    features.at[tid, ('mfcc', 'mean')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'std')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'skew')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'kurtosis')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'median')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'min')] = # Your code here.\n",
-    "    features.at[tid, ('mfcc', 'max')] = # Your code here.\n",
+    "    features.at[tid, ('mfcc', 'mean')] = np.mean(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'std')] = np.std(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'skew')] = stats.skew(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'kurtosis')] = stats.kurtosis(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'median')] = np.median(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'min')] = np.min(mfcc, axis=1)\n",
+    "    features.at[tid, ('mfcc', 'max')] = np.max(mfcc, axis=1)\n",
     "\n",
     "features['mfcc','mean'].head(4)"
    ]
@@ -409,8 +417,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here.\n",
-    "# Example: features.drop(('mfcc', 'mean'), axis=1, inplace=True)"
+    "features.drop(('mfcc', 'kurtosis'), axis=1, inplace=True)\n",
+    "features.drop(('mfcc', 'skew'), axis=1, inplace=True)\n",
+    "features.drop(('mfcc', 'min'), axis=1, inplace=True)\n",
+    "features.drop(('mfcc', 'max'), axis=1, inplace=True)"
    ]
   },
   {
@@ -469,7 +479,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "distances = # Your code here."
+    "#distances = spatial.distance.pdist(features, metric='euclidean')  # Lowest error rate.\n",
+    "distances = spatial.distance.pdist(features, metric='cosine')  # Nicest LE plot.\n",
+    "#distances = spatial.distance.pdist(features, metric='cityblock')\n",
+    "#distances = spatial.distance.pdist(features, metric='minkowski', p=1.4)  # Lowest error rate.\n",
+    "distances = spatial.distance.squareform(distances)"
    ]
   },
   {
@@ -501,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why are some distances equal to zero? **Your answer here.**"
+    "Why are some distances equal to zero? **Your answer here.** Because $d(u,u) = 0$, i.e. distance to itself."
    ]
   },
   {
@@ -514,7 +528,7 @@
     "$$\\mathbf{W}(u,v) = \\exp \\left( \\frac{-d^2(u, v)}{\\sigma^2} \\right),$$\n",
     "where $\\sigma$ is a parameter which controls the width of the kernel.\n",
     "\n",
-    "Bonus. Can you think of another suitable kernel? **Your answer here.**\n",
+    "Bonus. Can you think of another suitable kernel? **Your answer here.** As the cosine distance is bounded by $[0,2]$, a suitable kernel for it would be $\\mathbf{W}(u,v) = 1 - d(u,v)/2$.\n",
     "\n",
     "Compute below the weight of each edge.\n",
     "\n",
@@ -530,9 +544,9 @@
    "outputs": [],
    "source": [
     "kernel_width = distances.mean()\n",
-    "weights = # Your code here.\n",
+    "weights = np.exp(-distances**2 / kernel_width**2)\n",
     "\n",
-    "# Your code here."
+    "np.fill_diagonal(weights, 0)"
    ]
   },
   {
@@ -560,7 +574,14 @@
     "plot(weights, axes[:, 0])\n",
     "\n",
     "NEIGHBORS = 100\n",
-    "# Your code here.\n",
+    "idx = np.argsort(weights)[:, :-NEIGHBORS]\n",
+    "for i in range(weights.shape[0]):\n",
+    "    weights[i, idx[i, :]] = 0\n",
+    "weights = np.maximum(weights, weights.T)\n",
+    "\n",
+    "# Epsilon graph. Not good because not connected.\n",
+    "# epsilon = np.percentile(weights, 80)\n",
+    "# weights[weights < epsilon] = 0\n",
     "\n",
     "plot(weights, axes[:, 1])"
    ]
@@ -601,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degrees = # Your code here.\n",
+    "degrees = weights.sum(0)\n",
     "\n",
     "plt.hist(degrees, bins=50);"
    ]
@@ -612,7 +633,7 @@
    "source": [
     "### 3.5 Graph Laplacian\n",
     "\n",
-    "We will later need the Fiedler vector. Shall we compute the combinatorial or the normalized Laplacian? **Your answer here.**\n",
+    "We will later need the Fiedler vector. Shall we compute the combinatorial or the normalized Laplacian? **Your answer here.** The normalized Laplacian.\n",
     "\n",
     "Implement your choice below. \n",
     "\n",
@@ -626,7 +647,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "laplacian = # Your code here.\n",
+    "# Combinatorial Laplacian.\n",
+    "laplacian = np.diag(degrees) - weights\n",
+    "\n",
+    "# Normalized Laplacian.\n",
+    "deg_inv = np.diag(1 / np.sqrt(degrees))\n",
+    "laplacian = deg_inv @ laplacian @ deg_inv\n",
+    "\n",
+    "# Alternatively:\n",
+    "# laplacian = np.identity(weights.shape[0]) - deg_inv @ weights @ deg_inv\n",
     "\n",
     "plt.spy(laplacian);"
    ]
@@ -660,7 +689,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "n_edges = laplacian.nnz - laplacian.shape[0]\n",
+    "print('{} edges out of {} x {} = {} ({:.2%})'.format(n_edges, *weights.shape, weights.size, n_edges/weights.size))"
    ]
   },
   {
@@ -671,7 +701,7 @@
     "\n",
     "The whole point of spectral graph theory is to compute the eigendecomposition of the Laplacian. We however don't need the full eigendecomposition (a.k.a. the graph Fourier basis) here. Compute the 10 eigenvectors with the smallest eigenvalues with one of the following functions: `np.linalg.eig`, `np.linalg.eigh`, `sparse.linalg.eigs`, `sparse.linalg.eigsh`. Justify your choice.\n",
     "\n",
-    "**Your answer here.**"
+    "**Your answer here.** The matrix is Hermitian (real symmetric) and sparse, so we can use `eigsh`. As we only need a few eigenvectors, using the implicitly restarted Lanczos method (a variant of the power method) is efficient."
    ]
   },
   {
@@ -680,7 +710,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eigenvalues, eigenvectors = # Your code here."
+    "eigenvalues, eigenvectors = sparse.linalg.eigsh(laplacian, k=10, which='SM')\n",
+    "\n",
+    "# That's much slower:\n",
+    "# eigenvalues, eigenvectors = np.linalg.eigh(laplacian.toarray())"
    ]
   },
   {
@@ -696,11 +729,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Why can we diagonalize the graph Laplacian in the first place? **Your answer here.**\n",
+    "Why can we diagonalize the graph Laplacian in the first place? **Your answer here.** Because the Laplacian is a symmetric real matrix. See the [spectral theorem](https://en.wikipedia.org/wiki/Spectral_theorem).\n",
     "\n",
-    "Why are all the eigenvalues real? **Your answer here.**\n",
+    "Why are all the eigenvalues real? **Your answer here.** The spectral theorem, again.\n",
     "\n",
-    "Why are all the eigenvalues non-negative? **Your answer here.**"
+    "Why are all the eigenvalues non-negative? **Your answer here.** Because the Laplacian is a [positive semi-definite matrix (PSD)](https://en.wikipedia.org/wiki/Positive-definite_matrix#Positive_semidefinite)."
    ]
   },
   {
@@ -718,14 +751,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "print(eigenvalues)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "**Your answer here.** The graph is connected because only one eigenvalue equals zero (eigenvalue zero has a multiplicity of one). The graph is connected by construction because of kNN."
    ]
   },
   {
@@ -752,7 +785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "**Your answer here.** We expect zero because the first eigenvalue is zero. As such, the first eigenvector lies in the null-space of the Laplacian. The small error is due to numerical precision."
    ]
   },
   {
@@ -794,7 +827,7 @@
     "\n",
     "One way to embed a graph is to use the value of the eigenvectors as coordinates. For the below plot, use the value of the second eigenvector as the x coordinate of a node, and the value of the third eigenvector as the y coordinate. The color is indicated by the genre.\n",
     "\n",
-    "Why don't we use the first eigenvector? **Your answer here.**"
+    "Why don't we use the first eigenvector? **Your answer here.** Because it is not informative. Beware, the first eigenvector of the normalized Laplacian is not constant (because of the normalization by the degrees)."
    ]
   },
   {
@@ -803,8 +836,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = # Your code here.\n",
-    "y = # Your code here.\n",
+    "x = eigenvectors[:, 1]\n",
+    "y = eigenvectors[:, 2]\n",
     "plt.scatter(x, y, c=genres, cmap='RdBu', alpha=0.5);"
    ]
   },
@@ -823,7 +856,7 @@
     "\n",
     "Note how we did not try to build a machine to recognize the musical genre given a track (that would have been a [classification problem](https://en.wikipedia.org/wiki/Statistical_classification)). We did merely try to visualize the data, by means of PCA and a graph embedding algorithm. What does it tell us that genre clearly appears in our visualization?\n",
     "\n",
-    "**Your answer here.**\n",
+    "**Your answer here.** Genres are useful to categorize songs and organize music collections. Or, the chosen features are (overly?) sensitive to musical genre. Or that I overfitted it to genre recognition while designing the assignment. Beware the pitfalls!\n",
     "\n",
     "As such, we can try to cluster the tracks with the Fiedler vector, and look if the (unsupervised) clustering agrees with the *ground truth* genre categorization. Reproduce below the above scatter plot, but with the sign of the Fiedler vector as the color instead of the genre."
    ]
@@ -834,7 +867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = # Your code here.\n",
+    "labels = (eigenvectors[:, 1] > 0)\n",
     "\n",
     "plt.scatter(x, y, c=labels, cmap='RdBu', alpha=0.5);"
    ]
@@ -854,7 +887,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "err = # Your code here.\n",
+    "err = np.sum(np.abs(labels - genres))\n",
+    "err = err if err < len(labels)/2 else len(labels) - err\n",
     "print('{} errors ({:.2%})'.format(err, err/len(labels)))"
    ]
   },
@@ -882,7 +916,7 @@
     "\n",
     "What is the name of the technique we used to visualize the data in the last two plots? What does it try to preserve when reducing the dimensionality (of the ambiant space) from 140 to 2?\n",
     "\n",
-    "**Your answer here.**"
+    "**Your answer here.** The technique is named Laplacian eigenmaps and has been introduced by Belkin and Niyogi in their paper [Laplacian Eigenmaps for Dimensionality Reduction and Data](http://web.cse.ohio-state.edu/~belkin.8/papers/LEM_NC_03.pdf). The algorithm tries to preserve the distance between data samples."
    ]
   }
  ],
