assignment 3: lost solution

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -601,7 +601,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "indices = np.argsort(tracks['genre'])\n",
+    "tracks = tracks.iloc[indices]\n",
+    "features = features.iloc[indices]\n",
+    "weights = weights[indices, :]\n",
+    "weights = weights[:, indices]\n",
+    "distances = distances[indices, :]\n",
+    "distances = distances[:, indices]\n",
+    "fig, axes = plt.subplots(1, 2)\n",
+    "axes[0].spy(weights)\n",
+    "axes[1].imshow(distances);"
    ]
   },
   {
