--- a/projects/ntds_projects.tex
+++ b/projects/ntds_projects.tex
@@ -83,7 +83,7 @@
 	\begin{enumerate}
 		\item Define a problem.
 			\begin{itemize}
-				\item Form groups \todo{of 4 students}.
+				\item Form groups of 3 or 4 students (4 preferred).
 				\item Write a short but convincing proposal.
 			\end{itemize}
 		\vfill
@@ -106,46 +106,50 @@
 \begin{frame}
 	\frametitle{Problem}
 	\begin{center}
-		Find a problem you want to solve.
+		Find a problem you want to solve. \\
+		Think about your interests: scientific, hobbies, or otherwise.
 	\end{center}
 	\vfill
 	%Sources of inspiration:
+	Use \textbf{graphs} (A Network Tour) and \textbf{real data} (of Data Science).
+	\vfill
 	\begin{itemize}
-		\item Classic problems: Network Science, recommendation, Natural
-			Language Processing, Computer Vision.
-		\vfill
-		\item Social websites are a wealth of information.\footnote{Not only
-			Facebook and Twitter, but also GitHub, Pinterest, StackOverflow,
-			YouTube, LinkedIn, Instagram, Tumblr, etc.}
-		\vfill
-		\item Your own interests: scientific, hobbies, or otherwise.
-		\vfill
-		\item Open challenges, e.g. \href{https://www.kaggle.com/}{kaggle} or \href{https://www.crowdai.org/}{crowdAI}.
-		\vfill
-		\item Any other.
-		\vfill
-		\item Discuss with us!
+		\define{Network Science} study networks! Tasks: analysis of properties, generative models, epidemics, etc.
+		\define{Spectral Graph Theory} use the eigendecomposition of the graph Laplacian! Tasks: study of network properties, clustering, visualization, etc.
+		\define{Graph Signal Processing} analyze signals defined on graphs! Tasks: information diffusion (e.g. for matrix completion and recommendation), denoising, semi-supervized learning, etc.\footnote{You can take a look at the \href{https://pygsp.readthedocs.io/en/stable/tutorials/index.html}{PyGSP tutorials.}}
 	\end{itemize}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
-	\frametitle{Datasets}
-	\begin{center}
-		Some more ideas.
-	\end{center}
-	\vfill
+	\frametitle{Data}
 	\begin{itemize}
-		\item \href{https://github.com/mdeff/fma}{Free Music Archive (FMA)}
-		\item \href{http://snap.stanford.edu/data/index.html}{Stanford Large Network Dataset Collection (SNAP)}
-		\item \href{https://doi.org/10.5281/zenodo.886484}{Wikipedia graph \& visits}
+		\small
+		\item Your own data, e.g. from your research.
+		\vfill
+		\item Call a web API or scrap a website (as assignments 1 and 3).
+			Social websites are a wealth of information.\footnote{
+			Twitter, Facebook, GitHub, Pinterest, StackOverflow,
+			YouTube, LinkedIn, Instagram, Tumblr, last.fm, reddit, etc.}
+		\vfill
+		\item From challenges, e.g. from \href{https://www.kaggle.com/}{kaggle} or \href{https://www.crowdai.org/}{crowdAI}.
+		\vfill
+		\item Some (list of) datasets.
 			\begin{itemize}
-				\item See e.g. \href{http://blog.miz.space/research/2017/08/14/wikipedia-collective-memory-dynamic-graph-analysis-graphx-spark-scala-time-series-network/}{Wikipedia graph mining: dynamic structure of collective memory}.
+				\scriptsize
+				\item \href{https://github.com/mdeff/fma}{Free Music Archive (FMA)}.
+				\item \href{https://doi.org/10.5281/zenodo.886484}{Wikipedia graph \& visits}. See e.g. \href{http://blog.miz.space/research/2017/08/14/wikipedia-collective-memory-dynamic-graph-analysis-graphx-spark-scala-time-series-network/}{this blog post}.
+				\item \href{http://snap.stanford.edu/data/index.html}{Stanford Large Network Dataset Collection (SNAP)}.
+				\item \href{https://linqs.soe.ucsc.edu/node/236}{Citation networks (Cora, arXiv, PubMed)}. See e.g. \href{http://paperscape.org/}{arXiv viz}.
+				\item The \href{http://networkrepository.com}{Network Repository}.
+				\item \href{https://github.com/briatte/awesome-network-analysis\#datasets}{A list of datasets for network analysis}.
+				\item \href{https://github.com/caesar0301/awesome-public-datasets}{Awesome Public Datasets}.
+				\item \href{https://opendata.swiss/en/}{Swiss open data}.
 			\end{itemize}
-		\item Brain, e.g. \url{https://www.humanconnectome.org}
-		\item \todo{We need more! Shall we be specific?}
-		% Look at ADA and my list
+		\vfill
+		\item More: transportation, communication, neural (artificial or biological), energy networks.
+		\item Any other. Discuss with us!
 	\end{itemize}
 \end{frame}
 
@@ -195,6 +199,8 @@
 		\vfill
 		\item You can take inspirations from the notebooks seen during the
 			lab sessions.
+		\vfill
+		\item Look at \href{https://github.com/mdeff/ntds_2016\#projects}{last year projects}.
 	\end{itemize}
 \end{frame}
 
@@ -209,14 +215,17 @@
 		\item Form groups of 3 or 4 students. No less, no more.
 			\begin{itemize}
 				\item One member of the group uploads the deliverables.
-				\item The names of all members should clearly appear.
+				\item The names of all members should appear clearly.
 			\end{itemize}
 		\vfill
+		\item The project can be shared with another course (e.g. data
+			visualization or ADA). State it clearly and specify what gets
+			graded for which course.
 		\item The project should follow the data acquisition, exploration and
 			exploitation workflow.
 		\vfill
-		\item Collecting data manually is optional, i.e. the use of datasets is
-			allowed. Data collection is a plus however.
+		\item Data must not be synthetic. While collecting data manually is
+			optional, i.e. the use of datasets is allowed, it is a plus.
 		\vfill
 		\item Each member of a team shall contribute equally to the project.
 	\end{itemize}
@@ -230,7 +239,7 @@
 		\define{Proposal} define the problem and explain your plan.
 			\begin{itemize}
 				\item Single page document.
-				\item Organize yourselves in groups of three or four students.
+				\item Organize yourselves in groups of 3 or 4 students.
 				\item Deadline: Tuesday, November 28, 2017. Upload on Moodle.
 				\item Not graded. Discussion with TAs will follow.
 			\end{itemize}
