--- a/projects/ntds_projects.tex
+++ b/projects/ntds_projects.tex
@@ -116,7 +116,7 @@
 	\begin{itemize}
 		\define{Network Science} study networks! Tasks: analysis of properties, generative models, epidemics, etc.
 		\define{Spectral Graph Theory} use the eigendecomposition of the graph Laplacian! Tasks: study of network properties, clustering, visualization, etc.
-		\define{Graph Signal Processing} analyze signals defined on graphs! Tasks: information diffusion (e.g. for matrix completion and recommendation), denoising, semi-supervized learning, etc.\footnote{You can take a look at the \href{https://pygsp.readthedocs.io/en/stable/tutorials/index.html}{PyGSP tutorials.}}
+		\define{Graph Signal Processing} analyze signals defined on graphs! Tasks: information diffusion (e.g., for matrix completion and recommendation), denoising, semi-supervized learning, etc.\footnote{You can take a look at the \href{https://pygsp.readthedocs.io/en/stable/tutorials/index.html}{PyGSP tutorials.}}
 	\end{itemize}
 \end{frame}
 
@@ -126,22 +126,22 @@
 	\frametitle{Data}
 	\begin{itemize}
 		\small
-		\item Your own data, e.g. from your research.
+		\item Your own data, e.g., from your research.
 		\vfill
 		\item Call a web API or scrap a website (as assignments 1 and 3).
 			Social websites are a wealth of information.\footnote{
-			Twitter, Facebook, GitHub, Pinterest, StackOverflow,
+			Twitter, Facebook, GitHub, Pinterest, Stack Overflow,
 			YouTube, LinkedIn, Instagram, Tumblr, last.fm, reddit, etc.}
 		\vfill
-		\item From challenges, e.g. from \href{https://www.kaggle.com/}{kaggle} or \href{https://www.crowdai.org/}{crowdAI}.
+		\item From challenges, e.g., on \href{https://www.kaggle.com/}{kaggle} or \href{https://www.crowdai.org/}{crowdAI}.
 		\vfill
 		\item Some (list of) datasets.
 			\begin{itemize}
 				\scriptsize
 				\item \href{https://github.com/mdeff/fma}{Free Music Archive (FMA)}.
-				\item \href{https://doi.org/10.5281/zenodo.886484}{Wikipedia graph \& visits}. See e.g. \href{http://blog.miz.space/research/2017/08/14/wikipedia-collective-memory-dynamic-graph-analysis-graphx-spark-scala-time-series-network/}{this blog post}.
+				\item \href{https://doi.org/10.5281/zenodo.886484}{Wikipedia graph \& visits}. See e.g., \href{http://blog.miz.space/research/2017/08/14/wikipedia-collective-memory-dynamic-graph-analysis-graphx-spark-scala-time-series-network/}{this blog post}.
 				\item \href{http://snap.stanford.edu/data/index.html}{Stanford Large Network Dataset Collection (SNAP)}.
-				\item \href{https://linqs.soe.ucsc.edu/node/236}{Citation networks (Cora, arXiv, PubMed)}. See e.g. \href{http://paperscape.org/}{arXiv viz}.
+				\item \href{https://linqs.soe.ucsc.edu/node/236}{Citation networks (Cora, arXiv, PubMed)}. See e.g., \href{http://paperscape.org/}{arXiv viz}.
 				\item The \href{http://networkrepository.com}{Network Repository}.
 				\item \href{https://github.com/briatte/awesome-network-analysis\#datasets}{A list of datasets for network analysis}.
 				\item \href{https://github.com/caesar0301/awesome-public-datasets}{Awesome Public Datasets}.
@@ -166,7 +166,7 @@
 
 \begin{frame}
 	\frametitle{Structure}
-	The structure of the notebook will follow the Data Science process seen
+	The structure of the notebook shall follow the Data Science process seen
 	during the lab sessions.
 	\vfill
 	\begin{enumerate}
@@ -178,7 +178,7 @@
 		\vfill
 		\define{Data exploitation} use the data to solve a task, to infer
 			knowledge, to draw conclusions.
-			The concepts and algorithms taught in class must be used.
+			The concepts or algorithms taught in class must be used.
 		\vfill
 		\define{Conclusion} discuss the results and summarize your findings.
 			What did we learn from the data and the project?
@@ -218,14 +218,14 @@
 				\item The names of all members should appear clearly.
 			\end{itemize}
 		\vfill
-		\item The project can be shared with another course (e.g. data
+		\item The project can be shared with another course (e.g., data
 			visualization or ADA). State it clearly and specify what gets
 			graded for which course.
 		\item The project should follow the data acquisition, exploration and
 			exploitation workflow.
 		\vfill
-		\item Data must not be synthetic. While collecting data manually is
-			optional, i.e. the use of datasets is allowed, it is a plus.
+		\item Data must not be synthetic. While manually collecting data is
+			optional, i.e., the use of datasets is allowed, it is a plus.
 		\vfill
 		\item Each member of a team shall contribute equally to the project.
 	\end{itemize}
