assignment 3: expand discussion

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -617,6 +617,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Look at the above matrices. It is clear that there is more connections between tracks from the same genre than across genres."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3.4 Degrees\n",
     "\n",
     "Compute below the degree vector.\n",
@@ -642,7 +649,7 @@
    "source": [
     "### 3.5 Graph Laplacian\n",
     "\n",
-    "We will later need the Fiedler vector. Shall we compute the combinatorial or the normalized Laplacian? **Your answer here.** The normalized Laplacian.\n",
+    "We will later need the Fiedler vector. Shall we compute the combinatorial or the normalized Laplacian? **Your answer here.** Both choices are valid. Clustering with the sign of the Fiedler vector of the combinatorial Laplacian is a relaxation of the RatioCut. A relaxation of the NormalizedCut is obtained with the normalized Laplacian. In practice, the normalized Laplacian is often preferred. Think also of your end goal. If you value visualization, choose the one who gives a better visual representation of the data at hand. In our case, the normalized Laplacian does better (from my point-of-view).\n",
     "\n",
     "Implement your choice below. \n",
     "\n",
