--- a/assignments/01_solution_florian.ipynb
+++ b/assignments/01_solution_florian.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Collect and Analyze a Twitter Network\n",
+    "# NTDS assignment 1: Student Solution\n",
     "Florian Benedikt Roth"
    ]
   },
