assignment 3: no need for iloc

--- a/assignments/03_spectral_graph_theory.ipynb
+++ b/assignments/03_spectral_graph_theory.ipynb
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks.iloc[:10, 0] = tracks.iloc[:10].apply(lambda track: get_genre(track.name), axis=1)\n",
+    "tracks.iloc[:10, 0] = tracks[:10].apply(lambda track: get_genre(track.name), axis=1)\n",
     "\n",
     "# Alternatively:\n",
     "# tracks.iloc[:10, 0] = list(map(get_genre, tracks.index[:10]))\n",
