--- a/demos/07_data_exploration_and_visualisation.ipynb
+++ b/demos/07_data_exploration_and_visualisation.ipynb
@@ -17,7 +17,9 @@
     "%matplotlib inline\n",
     "import sys\n",
     "import os.path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -513,11 +515,10 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "import scipy\n",
     "import scipy.stats as st\n",
-    "import time"
+    "import time\n",
+    "%matplotlib notebook"
    ]
   },
   {
@@ -542,6 +543,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also experiment with different layouts for drawing the graph. The default layout positions nodes using the Fruchterman-Reingold force-directed algorithm (spring layout: https://en.wikipedia.org/wiki/Force-directed_graph_drawing). Draw the graph using the spectral layout."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -560,20 +568,19 @@
    "outputs": [],
    "source": [
     "def draw_graph_time_series(x):\n",
-    "    fig2 = plt.figure()\n",
-    "    ax2 = fig2.add_subplot(111)\n",
+    "    fig, ax = plt.subplots()\n",
     "    plt.ion()\n",
     "\n",
-    "    fig2.show()\n",
-    "    fig2.canvas.draw()\n",
-    "    pos=nx.spring_layout(er) #we have to fix the position of nodes\n",
+    "    fig.show()\n",
+    "    fig.canvas.draw()\n",
+    "    pos=nx.spectral_layout(er) #we have to fix the position of nodes\n",
     "\n",
     "    l = 0\n",
     "    for i in range(0,T):\n",
-    "        ax2.clear()\n",
-    "        nx.draw_networkx(er, ax=ax2, pos=pos, node_size=x[:,i]*100)\n",
-    "        ax2.text(0,0,i)\n",
-    "        fig2.canvas.draw()\n",
+    "        ax.clear()\n",
+    "        nx.draw_networkx(er, ax=ax, pos=pos, node_size=x[:,i]*100)\n",
+    "        ax.text(0,0,i)\n",
+    "        fig.canvas.draw()\n",
     "        time.sleep(0.01)"
    ]
   },
@@ -584,6 +591,7 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
+    "%matplotlib notebook\n",
     "draw_graph_time_series(epsilon)"
    ]
   },
@@ -591,14 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also experiment with different layouts for drawing the graph. The default layout positions nodes using the Fruchterman-Reingold force-directed algorithm (spring layout: https://en.wikipedia.org/wiki/Force-directed_graph_drawing). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the last experiment we plotted noise. Create two events on your graph at times 10 and 30. Each event should be centered in a randomly selected node and increase the signal value of that node by 50. Both events should then propagate through the graph with the heat kernel model. When an event occurs, color the source node of the event to a different color to help visualise it better. Draw the graph using spectral layout."
+    "In the last experiment we plotted noise. Create two events on your graph at times 10 and 30. Each event should be centered in a randomly selected node and increase the signal value of that node by 50. Both events should then propagate through the graph with the heat kernel model. When an event occurs, color the source node of the event to a different color to help visualise it better. Draw the graph using the spring layout."
    ]
   },
   {
@@ -645,25 +646,25 @@
    "outputs": [],
    "source": [
     "def draw_graph_diffusion(x):\n",
-    "    fig2 = plt.figure()\n",
-    "    ax2 = fig2.add_subplot(111)\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111)\n",
     "    plt.ion()\n",
     "\n",
-    "    fig2.show()\n",
-    "    fig2.canvas.draw()\n",
+    "    fig.show()\n",
+    "    fig.canvas.draw()\n",
     "    pos=nx.spring_layout(er)\n",
     "    node_col = ['r'] * T\n",
     "\n",
     "    l = 0\n",
     "    for i in range(0,T):\n",
-    "        ax2.clear()\n",
+    "        ax.clear()\n",
     "        if l<2:\n",
     "            if i == t[l]:\n",
     "                node_col[source[l]] = 'b'\n",
     "                l = l+1\n",
-    "        nx.draw_networkx(er, ax=ax2, node_color = node_col, pos=pos, node_size=x[:,i]*100)\n",
-    "        ax2.text(0,0,i)\n",
-    "        fig2.canvas.draw() \n",
+    "        nx.draw_networkx(er, ax=ax, node_color = node_col, pos=pos, node_size=x[:,i]*100)\n",
+    "        ax.text(0,0,i)\n",
+    "        fig.canvas.draw() \n",
     "        time.sleep(0.1)"
    ]
   },
@@ -675,15 +676,6 @@
    "source": [
     "draw_graph_diffusion(x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
